--- a/css/blocks/review.css
+++ b/css/blocks/review.css
@@ -42,10 +42,6 @@
   text-decoration: underline;
 }
 
-.review__tags {
-  gap: 5px 5px;
-}
-
 .review__content {
   flex: 1;
 }
